Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64110

Parameter prioritization doesn't match documentation

    XMLWordPrintable

Details

    • 9c6563c780eef3890c83b82ebbb0ebf271fb6897 (qt/qt3d/dev) c7a4ae428cb033e9497a2b175a351f274ffacd0a (qt/tqtc-qt3d/tqtc/lts-5.15)

    Description

      Attached will be a sample application that uses several ways to set the parameter. In this case it is the color of the cube. If you deselect (comment off for instance) the prevailing color, you'll get the following order for the parameter's priority.

      TechniqueFilter "orange"
      RenderPassFilter "salmon"
      QMaterial "purple"
      QTechnique "cyan"
      QEffect "yellow"
      QRenderPass "green"
      GLSL default uniform values "white"

      This is different than on the documentation.

      However, when using the Multiple Viewport (which makes 3 RenderViews, ClearBuffers its own leaf as not to clear the first viewport when rendering the second) the priority order of the TechniqueFilter and RenderPassFilter's parameters switches places: 

      • RenderPassFilter (salmon) 
      • Material (purple) 
      • Technique (cyan) 
      • Effect (yellow) 
      • RenderPass (green) 
      • TechniqueFilter (orange) 
      • GLSL default uniform values (white) 

      Also, when using two viewports and commenting out ALL c++ parameter settings, also comment out ALL the parameters in the 2nd viewport, we find that the 1st cube is salmon while the 2nd is orange.

      Attachments

        For Gerrit Dashboard: QTBUG-64110
        # Subject Branch Project Status CR V

        Activity

          People

            anmaatta Antti Määttä
            misalmel Mika Salmela
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes