Fix parameter priorization documentation

Fixes: QTBUG-64110
Change-Id: I09330ba29b0c120d6e7e0ae0b2bf8d4e388054e1
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>
(cherry picked from commit 9c6563c780eef3890c83b82ebbb0ebf271fb6897)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>